[gd_scene load_steps=2 format=3 uid="uid://ckde3n0ud4be"]

[ext_resource type="Script" path="res://shop.gd" id="1_fdy4d"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_fdy4d")

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 1, 0.623529, 0.572549)
metadata/_edit_use_anchors_ = true

[node name="restart" type="Button" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 624.0
offset_top = 824.0
offset_right = 1296.0
offset_bottom = 920.0
theme_override_font_sizes/font_size = 60
text = "Restart"

[node name="upgrade_speed" type="Button" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 216.0
offset_right = 568.0
offset_bottom = 256.0
text = "SPEED"

[node name="speed_cost" type="Label" parent="GameOver/ColorRect/upgrade_speed"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 343.0
offset_top = 1.0
offset_right = 430.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actual_speed" type="Label" parent="GameOver/ColorRect/upgrade_speed"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 214.0
offset_top = 1.0
offset_right = 301.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_hp" type="Button" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 304.0
offset_right = 568.0
offset_bottom = 344.0
text = "MAX HP"

[node name="hp_cost" type="Label" parent="GameOver/ColorRect/upgrade_hp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 346.0
offset_right = 433.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actual_hp" type="Label" parent="GameOver/ColorRect/upgrade_hp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 215.0
offset_right = 302.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_damage" type="Button" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 400.0
offset_right = 568.0
offset_bottom = 440.0
text = "DAMAGE"

[node name="damage_cost" type="Label" parent="GameOver/ColorRect/upgrade_damage"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 346.0
offset_top = 1.0
offset_right = 433.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actual_damage" type="Label" parent="GameOver/ColorRect/upgrade_damage"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 217.0
offset_top = 1.0
offset_right = 304.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_reload" type="Button" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 416.0
offset_top = 487.0
offset_right = 568.0
offset_bottom = 527.0
text = "RELOAD SPEED"

[node name="reload_cost" type="Label" parent="GameOver/ColorRect/upgrade_reload"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 348.0
offset_right = 435.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actual_reload" type="Label" parent="GameOver/ColorRect/upgrade_reload"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 220.0
offset_right = 307.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.909804, 0.85098, 0, 1)
theme_override_font_sizes/font_size = 25
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shop_money_label" type="Label" parent="GameOver"]
unique_name_in_owner = true
offset_left = 1023.0
offset_top = 324.0
offset_right = 1439.0
offset_bottom = 412.0
theme_override_colors/font_color = Color(0.964706, 0.870588, 0, 1)
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GameOver/ColorRect/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/upgrade_speed" to="." method="_on_upgrade_speed_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/upgrade_hp" to="." method="_on_upgrade_hp_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/upgrade_damage" to="." method="_on_upgrade_damage_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/upgrade_reload" to="." method="_on_upgrade_reload_pressed"]
